# tsbrowser

./: 404.html  README.md  flags_2.json  index.html  mkdocs.yml  pylock.toml  pyproject.toml  requirements-dev.txt  requirements.txt  tsbrowser_evo.py  tsbrowser_evo_config_template.py  tsbrowser_example_config.py  tsbrowser_test_config.py  vhr.py
docs/: index.md  interface-overview.md  running.md  setup.md
docs/img/: annotated_interface.odg
running/: index.html
search/: search_index.json
setup/: index.html
src/tsbrowser/: __init__.py  cli.py
