[project]
name = "s2-timeseries-labeller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.12.13",
    "dask>=2024.8.0",
    "geopandas>=1.0.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pillow>=11.2.1",
    "requests>=2.32.4",
    "rioxarray>=0.15.0",
    "xmltodict>=0.14.2",
]
