[project]
name = "tsbrowser"
version = "0.1.1"
description = "Timeseries Browser for Sentinel-2 data analysis and labeling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.13",
    "dask>=2024.8.0",
    "geopandas>=1.0.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pillow>=11.2.1",
    "requests>=2.32.4",
    "rioxarray>=0.15.0",
    "xmltodict>=0.14.2",
]

[project.scripts]
tsbrowser = "tsbrowser.cli:main"

[build-system]
requires = ["setuptools>=64,<76", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tsbrowser = ["assets/*"]

[tool.ruff.lint]
extend-select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "NPY",      # Some numpy-specific things
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.15",
]
