[project]
name = "tsbrowser"
version = "0.1.1"
description = "Timeseries Browser for Sentinel-2 data analysis and labeling"
readme = "README.md"
authors = [
    { name = "Jonas Viehweger", email = "jonas.viehweger@joanneum.at" },
    { name = "Martin Puhm" }
]
requires-python = ">=3.10"
license = {text = "EUPL-1.2"}
dependencies = [
    "aiohttp>=3.12.13",
    "dask>=2024.8.0",
    "geopandas>=1.0.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pillow>=11.2.1",
    "requests>=2.32.4",
    "rioxarray>=0.15.0",
    "xmltodict>=0.14.2",
]

[project.scripts]
tsbrowser = "tsbrowser.cli:main"

[project.urls]
Homepage = "https://github.com/JR-DIGITAL/tsbrowser"
Documentation = "https://jr-digital.github.io/tsbrowser/"
Repository = "https://github.com/JR-DIGITAL/tsbrowser"
Issues = "https://github.com/JR-DIGITAL/tsbrowser/issues"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.ruff.lint]
extend-select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "NPY",      # Some numpy-specific things
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.15",
]
